<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ScrollView
            android:id="@+id/product_detail_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/product_detail_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5.0dip"
                    android:adjustViewBounds="true"
                    android:background="@drawable/detail_placeholder"
                    android:padding="15.0dip"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/product_name_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="2.0dip"
                    android:layout_marginRight="2.0dip"
                    android:layout_marginTop="2.0dip"
                    android:gravity="center_horizontal"
                    android:textColor="#ff000000"
                    android:textSize="14.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10.0dip"
                    android:drawablePadding="5.0dip"
                    android:textColor="#ff000000"
                    android:textSize="11.0sp" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10.0dip"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/brand"
                                android:textColor="#ff5e5f61"
                                android:textSize="12.0sp" />

                            <TextView
                                android:id="@+id/product_brand_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#ff000000"
                                android:textSize="12.0sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7.0dip"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/mrp"
                                android:textColor="#ff5e5f61"
                                android:textSize="12.0sp" />

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" >

                                <TextView
                                    android:id="@+id/product_price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentTop="true"
                                    android:includeFontPadding="false"
                                    android:textColor="#ff777777"
                                    android:textSize="20.0sp"
                                    android:textStyle="bold" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentTop="true"
                                    android:layout_marginLeft="1.0dip"
                                    android:layout_toRightOf="@id/product_price"
                                    android:orientation="vertical" >

                                    <TextView
                                        android:id="@+id/product_decimal_price"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:includeFontPadding="false"
                                        android:text=".00"
                                        android:textColor="#ff777777"
                                        android:textSize="7.0sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/symbol_rupee"
                                        android:layout_width="14.0dip"
                                        android:layout_height="9.0dip"
                                        android:background="#ff777777"
                                        android:gravity="center"
                                        android:includeFontPadding="false"
                                        android:text="@string/rupee_symbol"
                                        android:textColor="#ffffffff"
                                        android:textSize="7.0sp" />
                                </LinearLayout>
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10.0dip"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/availability"
                                android:textColor="#ff5e5f61"
                                android:textSize="12.0sp" />

                            <TextView
                                android:id="@+id/product_availability_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="#ff000000"
                                android:textSize="12.0sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7.0dip"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/you_pay"
                                android:textColor="#ff5e5f61"
                                android:textSize="12.0sp" />

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" >

                                <TextView
                                    android:id="@+id/product_feature_price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentTop="true"
                                    android:includeFontPadding="false"
                                    android:textColor="#ffd8813b"
                                    android:textSize="20.0sp"
                                    android:textStyle="bold" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentTop="true"
                                    android:layout_marginLeft="1.0dip"
                                    android:layout_toRightOf="@id/product_feature_price"
                                    android:orientation="vertical" >

                                    <TextView
                                        android:id="@+id/product_feature_decimal_price"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:includeFontPadding="false"
                                        android:text=".00"
                                        android:textColor="#ffd8813b"
                                        android:textSize="7.0sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/symbol_rupee_feature"
                                        android:layout_width="14.0dip"
                                        android:layout_height="9.0dip"
                                        android:background="#ffd8813b"
                                        android:gravity="center"
                                        android:includeFontPadding="false"
                                        android:text="@string/rupee_symbol"
                                        android:textColor="#ffffffff"
                                        android:textSize="7.0sp" />
                                </LinearLayout>
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>

                <Button
                    android:id="@+id/product_cart"
                    android:layout_width="46.0dip"
                    android:layout_height="30.0dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="3.0dip"
                    android:background="@drawable/cart_btn_list" />

                <ImageView
                    android:id="@+id/red_alert_productdetail"
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="3.0dip"
                    android:background="@drawable/red_alert"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/product_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5.0dip"
                    android:gravity="left"
                    android:padding="10.0dip"
                    android:text=""
                    android:textColor="#ff000000"
                    android:textSize="11.0sp" />

                <demo.vicshady.coreshopping.ui.utils.ScrollableGridView
                    android:id="@+id/list_similarproducts"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2.0dip"
                    android:layout_marginLeft="2.0dip"
                    android:layout_marginRight="2.0dip"
                    android:layout_marginTop="2.0dip"
                    android:stretchMode="columnWidth" 
                    android:numColumns="1"
                    android:horizontalSpacing="2.0dip" 
                    android:verticalSpacing="2.0dip"
                    android:divider="@color/bg_color"
            		android:listSelector="@drawable/list_item_selected"
            		android:drawSelectorOnTop="true"
                     />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>